feat : 동적쿼리 작성을 위한 QueryDSL 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,9 @@ dependencies {
     implementation 'org.springframework.security:spring-security-messaging'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'com.querydsl:querydsl-jpa'
 
-
+    annotationProcessor 'com.querydsl:querydsl-apt:jpa'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
