--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,12 @@ dependencies {
     implementation 'org.springframework.security:spring-security-messaging'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'com.querydsl:querydsl-jpa'
 
-    annotationProcessor 'com.querydsl:querydsl-apt:jpa'
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
