--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
@@ -51,4 +54,8 @@ tasks.named('test') {
 
 tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
+}
+
+test {
+    systemProperty 'file.encoding', 'UTF-8' // 테스트 시 JVM에 인코딩 전달
 }
