refactor : dockerignore modified

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,22 @@
+/build/
+/.gradle/
+
+.idea/
+*.iml
+.vscode/
+
 .git
-.gradle
-**/build
-**/out
-Dockerfile
-*.yml
+.gitignore
+
+.env.local
+.env.*.local
+
+*.log
+logs/
+tmp/
+
+Dockerfile*
+.dockerignore
+
+.DS_Store
+Thumbs.db
