--- a/build.gradle
+++ b/build.gradle
@@ -57,12 +57,12 @@ dependencies {
     testImplementation 'com.h2database:h2'
 }
 
-def querydslDir = "src/main/generated"
+def querydslDir = "$buildDir/generated/querydsl"
 
 sourceSets {
     main {
         java {
-            srcDirs += querydslDir
+            srcDir "$buildDir/generated/querydsl"
         }
     }
 }
