--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-../kimprun/src/main/generated
+./src/main/generated
 
 ### STS ###
 .apt_generated
@@ -38,4 +38,4 @@ out/
 .vscode/
 
 ### FILE ###
-*.yml
+application-dev.yml
