refactor : integration 또한 디렉토리 없는 이슈로 인한 명시적 생성

--- a/.github/workflows/cicd-main.yaml
+++ b/.github/workflows/cicd-main.yaml
@@ -76,6 +76,7 @@ jobs:
       - name: Download application-dev.yml
         run: |
           aws ${{ secrets.AWS_S3_BE_YAML }} ./kimprun_be/src/main/resources/application-dev.yml
+          mkdir -p ./kimprun_be/src/test/resources
           cp ./kimprun_be/src/main/resources/application-dev.yml ./kimprun_be/src/test/resources/application-dev.yml
 
       - name: Download env file from S3
