refactor : compose.yaml 디렉토리 명

--- a/.github/workflows/cicd-main.yaml
+++ b/.github/workflows/cicd-main.yaml
@@ -85,10 +85,10 @@ jobs:
 
       - name: Update compose.yaml fe env file path
         run: |
-          sed -i 's|ENV_FILE_DIR|- ./kimprun_fe/.env.test|' compose.yaml
+          sed -i 's|ENV_FILE_DIR|- ./kimprun_fe/.env.test|' ./kimprun_be/compose.yaml
       - name: Replace FE image in compose.yaml
         run: |
-          sed -i 's|fe_image|${{ secrets.KIMPRUN_FE_IMAGE }}|g' compose.yaml
+          sed -i 's|fe_image|${{ secrets.KIMPRUN_FE_IMAGE }}|g' ./kimprun_be/compose.yaml
 
       # 권한 부여
       - name: Grant execute permission
