refactor : docker compose 실행 디렉토리 변

--- a/.github/workflows/cicd-main.yaml
+++ b/.github/workflows/cicd-main.yaml
@@ -99,7 +99,7 @@ jobs:
       # 통합 테스트 환경 구축
       - name: Start dependencies with Docker compose
         run: docker compose up -d
-        working-directory: ./
+        working-directory: ./kimprun_be
 
       # 통합 테스트 환경 구축 후 30초 대기 - 애플리케이션 실행 시간
       - name: Wait for dependencies to start
@@ -113,7 +113,7 @@ jobs:
       - name: Stop dependencies
         if: always()
         run: docker compose down
-        working-directory: ./
+        working-directory: ./kimprun_be
       # 통합 테스트 결과 업로드 (통합테스트 실패 시)
       - name: Upload integration test results
         uses: actions/upload-artifact@v4
