--- a/.github/workflows/cicd-main.yaml
+++ b/.github/workflows/cicd-main.yaml
@@ -65,6 +65,12 @@ jobs:
           java-version: 17
           distribution: 'temurin'
           cache: gradle
+      # 도커 설정
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       # AWS 설정
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
