--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -151,7 +151,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       # 도커 이미지 빌드
       - name: Build Docker image
-        run: docker build --platform linux/amd64,linux/arm64 -t hojipkim/kimprun_be:${{ env.COMMIT_ID }} .
+        run: docker build --platform linux/amd64 -t hojipkim/kimprun_be:${{ env.COMMIT_ID }} .
         working-directory: ./
       # 도커허브에 푸시
       - name: Push Docker image
