refactor : branch 이름 추가

--- a/.github/workflows/cd-main.yaml
+++ b/.github/workflows/cd-main.yaml
@@ -8,6 +8,8 @@ on:
       - completed
     branches:
       - '#2-infra'
+      - '2-infra'
+      - 'refs/heads/#2-infra'
 
 jobs:
   deploy-to-develop-server:
