refactor : main브랜치의 CI-main을 가리키도록 변경 - 결국 main브랜치로의 push가 진행되어야 배포 가능 ci-main은 main브랜치와, 개발용 #2-infra 브랜치에만 반응을하도록

--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -6,7 +6,8 @@ on:
     # 소스코드의 변경 시 실행
     #    paths: src/**
     branches:
-      - '#2-infra'
+      - 'main'
+      - "#2-infra"
 
 jobs:
   # 단위 테스트
