--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+/src/main/generated/
+application.yml
 
 ### STS ###
 .apt_generated
@@ -37,6 +39,4 @@ out/
 .vscode/
 
 ### FILE ###
-application-test.yml
-application-local.yml
-application-prod.yml
+application-dev.yml
