hotfix : cd-main commit_id 변수 변경

--- a/.github/workflows/cd-main.yaml
+++ b/.github/workflows/cd-main.yaml
@@ -30,7 +30,7 @@ jobs:
         run: |
           COMMIT_ID=$(cat commit-id.txt)
           echo "COMMIT_ID=${{COMMIT_ID}}" >> $GITHUB_ENV
-          echo "Commit ID : ${{COMMIT_ID}}"
+          echo "Commit ID : ${COMMIT_ID}"
 
       - name: Checkout charts repository
         uses: actions/checkout@v4
