--- a/.github/workflows/cd-main.yaml
+++ b/.github/workflows/cd-main.yaml
@@ -29,7 +29,7 @@ jobs:
         id: read-commit-id
         run: |
           COMMIT_ID=$(cat commit-id.txt)
-          echo "COMMIT_ID=${{COMMIT_ID}}" >> $GITHUB_ENV
+          echo "COMMIT_ID=${COMMIT_ID}" >> $GITHUB_ENV
           echo "Commit ID : ${COMMIT_ID}"
 
       - name: Checkout charts repository
