refactor : 변수화설정 및 docker login action 추가

--- a/.github/workflows/cd-main.yaml
+++ b/.github/workflows/cd-main.yaml
@@ -38,6 +38,7 @@ jobs:
           path: ./kimprun_be
 
       - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
@@ -46,10 +47,11 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
-        run : |
+        run: |
+          cd ./kimprun_be
           docker build --platform linux/amd64 -t hojipkim/kimprun_be:${{ env.COMMIT_ID }} .
           docker push hojipkim/kimprun_be:${{ env.COMMIT_ID }}
-          echo " Docker image pushed: hojipkim/kimprun_be:${{ env.COMMIT_ID }}"
+          echo "✅ Docker image pushed: hojipkim/kimprun_be:${{ env.COMMIT_ID }}"
     outputs:
       commit-id: ${{ env.COMMIT_ID }}
 
@@ -78,32 +80,61 @@ jobs:
 
       - name: Commit and push changes to charts repository
         run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
           git add values.yaml
-          git commit -m "Update backend image tag to $COMMIT_ID"
+          git commit -m "🚀 Update backend image tag to $COMMIT_ID"
           git push origin main
 
-      - name: Deploy with ArgoCD CLI (Port Forwarding)
+      - name: Deploy with ArgoCD CLI
         run: |
-          echo "🚀 Starting deployment with ArgoCD CLI..."
+          echo "🚀 Starting ArgoCD deployment..."
           
+          # 포트포워딩으로 안전하게 접근
           kubectl port-forward svc/argocd-server -n argocd 8080:443 &
           PORT_FORWARD_PID=$!
           
-          echo "⏳ Waiting for port-forward to be ready..."
-          sleep 10
+          # 포트포워딩 준비 대기
+          echo "⏳ Preparing ArgoCD connection..."
+          sleep 15
           
+          # ArgoCD 로그인
           argocd login localhost:8080 \
-            --username admin \
-            --password UonNFTEzFUJUdPsB \
+            --username ${{ secrets.ARGOCD_USERNAME }} \
+            --password ${{ secrets.ARGOCD_PASSWORD }} \
             --insecure
-      
+          
           echo "✅ ArgoCD login successful!"
           
+          # 애플리케이션 새로고침 (최신 차트 반영)
+          argocd app refresh kimprun-app --insecure
+          
+          # 애플리케이션 동기화
+          echo "🔄 Syncing application..."
           argocd app sync kimprun-app --insecure
           
-          echo "✅ Deployment completed successfully!"
+          # 배포 완료 대기
+          echo "⏳ Waiting for deployment completion..."
+          argocd app wait kimprun-app --health --timeout 300 --insecure
           
+          # 최종 상태 확인
+          echo "📊 Final application status:"
+          argocd app get kimprun-app --insecure
+          
+          # 포트포워딩 정리
           kill $PORT_FORWARD_PID || true
+          
+          echo "✅ Deployment completed successfully!"
+
+      - name: Deployment summary
+        run: |
+          echo "🎉 ===== DEPLOYMENT SUMMARY ====="
+          echo "📦 Image: hojipkim/kimprun_be:${{ env.COMMIT_ID }}"
+          echo "🔄 Commit: ${{ github.sha }}"
+          echo "🌐 Environment: Development"
+          echo "⏰ Deployed at: $(date)"
+          echo "🔗 ArgoCD: https://argocd.kimprun.com"
+          echo "================================"
 
       - name: Clean up workspace
         if: always()
