refactor : commit id txt파일 생성 및 cd shell script라인 주석제거

--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -138,11 +138,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Generate commit ID
         shell: bash
         run: |
           echo "COMMIT_ID=${GITHUB_SHA::6}" >> "$GITHUB_ENV"
+          echo "${GITHUB_SHA::6}" > commit-id.txt
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
