--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
       fe:
-        image: hojipkim/kimprun_fe:b11fbb
+        image: hojipkim/kimprun_fe:latest
         ports:
           - '3000:3000'
         env_file:
@@ -9,6 +9,10 @@ services:
         image: redis
         ports:
           - '6379:6379'
+      scrap:
+        image: hojipkim/kimprun_scrap:latest
+        ports:
+          - '8090:8090'
       db:
         image: postgres
         environment:
