refactor : action-download-artifact feature (github token init)

--- a/.github/workflows/cd-main.yaml
+++ b/.github/workflows/cd-main.yaml
@@ -24,6 +24,7 @@ jobs:
           run_id: ${{ github.event.workflow_run.id }}
           name: commit-id
           path: .
+          github_token: ${{ secrets.CHARTS_REPO_PAT }}
 
       - name: Read commit ID
         id: read-commit-id
