hotfix : gradle compile 순서 변경

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ ext {
 sourceSets {
     main {
         java {
-            srcDir "$buildDir/generated/querydsl"
+            srcDirs = ['src/main/java', "$buildDir/generated/querydsl"]
         }
     }
 
